--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -1,12 +1,10 @@
 .header-container {
     width: 100%;
-    height: 90px;
-    border: 2px solid red;
+    height: 80px;
     padding: 30px;
     text-align: center;
     top: 0;
-    
-
+    background-color: rgba(0, 0, 0, 0.4);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -21,7 +19,6 @@
         width: 30px;
         height: 30px;
     }
-
 }
 
 .header-fixed {
@@ -30,9 +27,4 @@
     left: 0;
     right: 0;
     z-index: 100;
-}
-
-img {
-    width: 100%;
-    height: 100%;
 }
