--- a/src/assets/scss/home-page.scss
+++ b/src/assets/scss/home-page.scss
@@ -2,7 +2,7 @@ $banner_image: "~@/assets/images/banner-bg.jpeg";
 
 .home-banner {
   width: 100%;
-  height: 380px;
+  height: 420px;
   background-image: url($banner_image);
   background-size: cover;
   background-position: center;
@@ -21,9 +21,13 @@ $banner_image: "~@/assets/images/banner-bg.jpeg";
     }
 
     p {
-      font-size: 18px;
-      font-weight: 400;
+      display: block;
+      font-size: 15px;
+      font-weight: 500;
       margin-bottom: 20px;
+      width: 470px;
+      font-family: serif;
+
     }
 
     .banner-text-buttons {
@@ -38,25 +42,45 @@ $banner_image: "~@/assets/images/banner-bg.jpeg";
   }
 }
 
-.comics-container {
-  overflow: auto;
-  white-space: nowrap;
+.comics-wrapper {
+  margin: 0 30px;
+  margin-top: 20px;
 
-  .comic-card {
-    width: 175px;
-    height: 250px;
-    border: 2px solid red;
-    display: inline-block;
-    margin: 10px;
-    position: relative;
+  .comic-list-title {
+    font-size: 24px;
+    font-weight: 700;
+    margin-bottom: 12px;
+  }
 
-    .comic-title {
-      display: block;
-      width: 100%;
-      padding: 10px;
-      background-color: rgba(0, 0, 0, 0.6);
-      position: absolute;
-      bottom: 10px;
+  .comics-container {
+    overflow: auto;
+    white-space: nowrap;
+    overflow-x: auto;
+
+    .comic-card {
+      width: 175px;
+      height: 250px;
+      display: inline-block;
+      margin: 10px;
+      position: relative;
+      cursor: pointer;
+
+      .comic-title {
+        display: block;
+        width: 100%;
+        padding: 10px;
+        background-color: rgba(0, 0, 0, 0.5);
+        color: #ffffff;
+        position: absolute;
+        bottom: 5px;
+        font-size: 14px;
+      }
+    }
+
+    .comic-card:hover {
+      transform: scale(1.04);
+      transition: transform 0.4s ease-in-out;
+      box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
     }
   }
 }
