--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -20,6 +20,9 @@ footer, header, nav, section, main{
 
 body{
     line-height: 1;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #302f2f;
+    color: #ffffff;
 }
 
 ol, ul{
