--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -7,3 +7,45 @@
 @import "header";
 @import "home-page";
 @import "detail-page";
+
+img {
+    width: 100%;
+    height: 100%;
+}
+
+.btn-classic {
+    padding: 10px 20px;
+    border-radius: 5px;
+    border: 1px solid #000;
+    background-color: #fff;
+    color: #000;
+    font-size: 14px;
+    font-weight: 700;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    &:hover {
+        background-color: #000;
+        color: #fff;
+    }
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 4px;
+    height: 5px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888; 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
