--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -1,30 +1,47 @@
 .header-container {
-    width: 100%;
-    height: 80px;
-    padding: 30px;
-    text-align: center;
-    top: 0;
-    background-color: rgba(0, 0, 0, 0.4);
+  width: 100%;
+  height: 80px;
+  padding: 30px;
+  text-align: center;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  .header-logo {
+    width: 100px;
+    height: 30px;
+  }
+
+  .right-icon-area {
     display: flex;
     justify-content: space-between;
     align-items: center;
 
+    .header-fav {
+      display: flex;
+      align-items: center;
+      margin-right: 30px;
 
-    .header-logo {
-        width: 100px;
-        height: 30px;
+      span {
+        margin-right: 6px;
+        font-size: 15px;
+        color: #fff;
+      }
     }
 
     .header-avatar {
-        width: 30px;
-        height: 30px;
+      width: 30px;
+      height: 30px;
     }
+  }
 }
 
 .header-fixed {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 100;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
 }
