--- a/src/assets/scss/home-page.scss
+++ b/src/assets/scss/home-page.scss
@@ -101,6 +101,7 @@ $banner_image: "~@/assets/images/banner-bg.jpeg";
     }
 
     .comic-card:hover .comic-add-fav {
+      transition: all 1s;
       color: #C02B31;
     }
   }
