--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -45,3 +45,13 @@
   right: 0;
   z-index: 100;
 }
+
+@media screen and (max-width: 700px) {
+  .header-fixed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+  }
+}
