--- a/src/assets/scss/home-page.scss
+++ b/src/assets/scss/home-page.scss
@@ -39,6 +39,13 @@ $banner_image: "~@/assets/images/banner-bg.jpeg";
         margin: 10px 10px 10px 0px;
       }
     }
+
+    @media screen and (max-width: 700px) {
+      p {
+        width: 100%;
+      }
+    }
+
   }
 }
 
@@ -101,7 +108,7 @@ $banner_image: "~@/assets/images/banner-bg.jpeg";
     }
 
     .comic-card:hover .comic-add-fav {
-      transition: all 1s;
+      transition: all 0.2s;
       color: #C02B31;
     }
   }
